--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+Server.port =9090
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
