adding springdoc configuration and functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
 
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=jdbc:postgresql://localhost:5431/employee_service
+spring.datasource.username=postgres
+spring.datasource.password=abdi
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+
+#swagger doc
+
+springdoc.swagger-ui.enabled = true
+#springdoc.swagger-ui.path = /swagger-ui.html
+springdoc.swagger-ui.tryItOutEnabled = false
+springdoc.swagger-ui.filter = false
+springdoc.swagger-ui.syntaxHighlight.activated = true
