--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,9 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 #swagger doc
 
 springdoc.swagger-ui.enabled = true
-#springdoc.swagger-ui.path = /swagger-ui.html
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path = /swagger-ui.html
 springdoc.swagger-ui.tryItOutEnabled = false
 springdoc.swagger-ui.filter = false
 springdoc.swagger-ui.syntaxHighlight.activated = true
+debug=true
