disabling debug in property file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ springdoc.swagger-ui.path = /swagger-ui.html
 springdoc.swagger-ui.tryItOutEnabled = false
 springdoc.swagger-ui.filter = false
 springdoc.swagger-ui.syntaxHighlight.activated = true
-debug=true
+#debug=true
